Fix minor layout issues

--- a/client/src/components/Blueprint/Blueprint.scss
+++ b/client/src/components/Blueprint/Blueprint.scss
@@ -100,7 +100,7 @@ $right-angle-polygon-bottom-flat: polygon(0 0, 100% 8%, 100% 100%, 0 100%);
 
 .buyer-persona-section {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   text-align: center;
   justify-content: center;
   align-items: center;
