--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,8 +1,7 @@
 footer {
     text-align: center;
     bottom: 0;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px;
     margin: 0 auto;
     height: 80px;
     width: 100%;
