--- a/client/src/components/Services/Services.scss
+++ b/client/src/components/Services/Services.scss
@@ -3,6 +3,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  padding-bottom: 50px;
 }
 
 .services-header {
